--- a/TaquillaITH/Views/Home/Index.cshtml
+++ b/TaquillaITH/Views/Home/Index.cshtml
@@ -2,7 +2,28 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center container">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="display-4">Corte del dia</h1>
+        </div>
+    </div>
+    <div class="row mt-2 justify-content-md-center">
+        <div class="col-6">
+            <p>El corte al dia de:</p>
+        </div>
+    </div>
+        <div class="row mt-2 justify-content-md-center">
+        <div class="col-6">
+            <input type="date" class="form-control" placeholder="Fecha" aria-label="Fecha" aria-describedby="addon-wrapping">  
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <div id="corte">
+
+            </div>
+        </div>
+    </div>
+        <button type="button" class="btn btn-outline-dark mt-4">Confirmar Corte</button>
 </div>
