--- a/TaquillaITH/Views/Home/Index.cshtml
+++ b/TaquillaITH/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
             url: "/Home/PostTodoItem",
             data: { "date": $("#date").val()},
             success: function (msg) {
-                alert(date);
+                alert("Corte realizado con exito");
             },
             error: function (xhr) {
                 alert('Error: ' + xhr.statusText);
