--- a/TaquillaITH/Views/Home/_Step3.cshtml
+++ b/TaquillaITH/Views/Home/_Step3.cshtml
@@ -1,5 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<div class="card col-6 align-items-center">
+  <div class="card-body container">
+      <div class="row">
+        <blockquote class="blockquote mb-0">
+            <p>Ingrese su número de membresía</p>
+            <input type="text" class="form-control col-12" id="membershipNumber" placeholder="Ej. 3">
+            <button class="col-12 btn btn-light mt-2 align-self-end">Confirmar</button>
+        </blockquote>
+      </div>
+  </div>
+</div>
