--- a/TaquillaITH/Views/TicketSale/Step1.cshtml
+++ b/TaquillaITH/Views/TicketSale/Step1.cshtml
@@ -1,76 +1,82 @@
 ﻿@model List<TaquillaITH.Models.Movie>
-@using TaquillaITH.ViewModels;
 @{
     ViewData["Title"] = "Venta de boletos";
     var date = DateTime.Now;
-    //var shows = (List<ShowTimesViewModel>)ViewBag["Shows"];
 }
-
-<div class="text-center container">
-    <div class="row">
-        <div class="col-12">
-            <h1 class="display-4">Catálogo de Películas</h1>
+<div id="Step1">
+    <div class="text-center container">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="display-4">Catálogo de Películas</h1>
+            </div>
         </div>
-    </div>
-    <div class="row mt-2 justify-content-md-center">
-        <div class="col-6">
-            <p>Al dia de:</p>
-        </div>
-    </div>
         <div class="row mt-2 justify-content-md-center">
-        <div class="col-6">
-            <input id="datePicker" type="date" class="form-control" placeholder="Fecha" aria-label="Fecha" aria-describedby="addon-wrapping">  
+            <div class="col-6">
+                <p>Al dia de:</p>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <hr/>
-        @if (Model.Any())
-        {
-            @foreach (var item in Model)
+            <div class="row mt-2 justify-content-md-center">
+            <div class="col-6">
+                <input id="datePicker" type="date" class="form-control" placeholder="Fecha" aria-label="Fecha" aria-describedby="addon-wrapping">  
+            </div>
+        </div>
+        <div class="row">
+            <hr/>
+            @if (Model.Any())
             {
-                <div class="col-5 mt-2 mb-2 ml-2 mr-2" style="border: solid black 2px;">
-                    <h1> @item.Name </h1>
-                    <img src="@item.PhotoUrl" width="350" height="600"/>
-                    <br/>
-                    @foreach (var schedule in item?.Schedule?.Replace(" ", string.Empty).Split(',').ToList())
-                    {
-                        <button type="button" value="@schedule" class="btn btn-primary mt-2 ml-2" onclick="ToggleSelect(@item.Id)"
-                                data-toggle="button" aria-pressed="false" autocomplete="off" id="MovieId-@item.Id">
-                          @schedule
-                        </button>
-                    }
-                    <br />
-                    <div id="@item.Id" class="mt-2 SelectTicket" style="display:none;">
-                        <select>
-                            <option selected disabled>Seleccione un tipo de boleto</option>
-                            <option value="boletoNormal"> Boleto Normal</option>
-                            <option value="boleto3D"> Boleto 3D</option>
-                            <option value="boletoVIP"> Boleto VIP</option>
-                        </select>
+                @foreach (var item in Model)
+                {
+                    <div class="col-5 mt-2 mb-2 ml-2 mr-2" style="border: solid black 2px;">
+                        <h1> @item.Name </h1>
+                        <img src="@item.PhotoUrl" width="350" height="600"/>
+                        <br/>
+                        @foreach (var schedule in item?.Schedule?.Replace(" ", string.Empty).Split(',').ToList())
+                        {
+                            <button type="button" value="@schedule" class="btn btn-primary mt-2 ml-2" onclick="ToggleSelect(@item.Id, @schedule)"
+                                    data-toggle="button" aria-pressed="false" autocomplete="off" id="MovieId-@item.Id">
+                              @schedule
+                            </button>
+                        }
+                        <br />
+                        <div id="@item.Id" class="mt-2 SelectTicket" style="display:none;">
+                            <select>
+                                <option selected disabled>Seleccione un tipo de boleto</option>
+                                <option value="boletoNormal"> Boleto Normal</option>
+                                <option value="boleto3D"> Boleto 3D</option>
+                                <option value="boletoVIP"> Boleto VIP</option>
+                            </select>
 
-                        <div class="form-group">
-                            <label class="control-label">Cantidad</label>
-                            <input class="form-control" type="number" max="10" min="1" />
+                            <div class="form-group">
+                                <label class="control-label">Cantidad</label>
+                                <input class="form-control" type="number" max="10" min="1" />
+                            </div>
+
+                            <button class="btn btn-outline-success" id="btnSelectButton" onCl> Seleccionar función</button>
                         </div>
-
-                        <button class="btn btn-outline-success" id="btnSelectButton"> Seleccionar función</button>
                     </div>
-                </div>
-                <hr/>
+                    <hr/>
+                }
             }
-        }
+        </div>
     </div>
 </div>
 
+<div id="Step2" style="display:none;">
+    <partial name="_Step2">
+</div>
+
 <script>
-    function ToggleSelect(id)
+    var selectedSchedule = "";
+    var selectedMovieId = 0;
+
+    function ToggleSelect(id, schedule)
     {
+        debugger;
         $('#' + id).toggle();
-        $( "#MovieId-"+id).click(function() {
-          alert( "Handler for .click() called." );
-        });
+        selectedMovieId = id;
+        selectedSchedule = schedule;
     }
-    
+
     $(document).ready(function () {
         var date = new Date();
         var day = date.getDate();
@@ -83,5 +89,53 @@
 
         $('#datePicker').val(today);
     });
+
+    function ToStep2()
+    {
+        
+    }
+
+    //$( "#target" ).click(function() {
+    //  alert( "Handler for .click() called." );
+    //});
+
+
+    //$.ajax({  
+    //        type: "GET",  
+    //        url: "/api/StudentAPI/GetAllStudents",  
+    //        contentType: "application/json; charset=utf-8",  
+    //        dataType: "json",  
+    //        success: function (data) {  
+    //            //alert(JSON.stringify(data));                  
+    //            $("#DIV").html('');   
+    //            var DIV = '';  
+    //            $.each(data, function (i, item) {  
+    //                var rows = "<tr>" +  
+    //                    "<td id='RegdNo'>" + item.regNo + "</td>" +  
+    //                    "<td id='Name'>" + item.name + "</td>" +  
+    //                    "<td id='Address'>" + item.address + "</td>" +  
+    //                    "<td id='PhoneNo'>" + item.phoneNo + "</td>" +  
+    //                    "<td id='AdmissionDate'>" + Date(item.admissionDate,  
+    //                        "dd-MM-yyyy") + "</td>" +  
+    //                    "</tr>";  
+    //                $('#Table').append(rows);  
+    //            }); //End of foreach Loop   
+    //            console.log(data);  
+    //        }, //End of AJAX Success function  
+  
+    //        failure: function (data) {  
+    //            alert(data.responseText);  
+    //        }, //End of AJAX failure function  
+    //        error: function (data) {  
+    //            alert(data.responseText);  
+    //        } //End of AJAX error function  
+    //    });         
+    //$( "#MovieId-"+id).click(function() {
+    //    alert( "Handler for .click() called." );
+    //});
+
+    //$(document).ready(function () {
+    //    $("#Step2").hide();
+    //});
 
 </script>
