--- a/TaquillaITH/Views/Shared/_Layout.cshtml
+++ b/TaquillaITH/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="https://cinemappi.herokuapp.com/">Cartelera</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-action="Step1" asp-controller="TicketSale">Venta</a>
+                        </li>
                     </ul>
                 </div>
             </div>
