--- a/TaquillaITH/Views/TicketSale/Step1.cshtml
+++ b/TaquillaITH/Views/TicketSale/Step1.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<TaquillaITH.Models.Movie>
 @{
     ViewData["Title"] = "Venta de boletos";
+    DateTime CurrentDate = (DateTime)ViewData["CurrentDate"];
 }
 <div id="Step1">
     <div class="text-center container">
@@ -14,27 +15,27 @@
                 <p>Al dia de:</p>
             </div>
         </div>
-            <div class="row mt-2 justify-content-md-center">
+        <div class="row mt-2 justify-content-md-center">
             <div class="col-6">
-                <input id="datePicker" type="date" class="form-control" placeholder="Fecha" aria-label="Fecha" aria-describedby="addon-wrapping">  
+                <input id="datePicker" type="date" class="form-control" placeholder="Fecha" aria-label="Fecha" aria-describedby="addon-wrapping">
             </div>
         </div>
         <div class="row">
-            <hr/>
+            <hr />
             @if (Model.Any())
             {
                 @foreach (var item in Model)
                 {
                     <div class="col-5 mt-2 mb-2 ml-2 mr-2" style="border: solid black 2px;">
                         <h1> @item.Name </h1>
-                        <img src="@item.PhotoUrl" width="350" height="600"/>
-                        <br/>
+                        <img src="@item.PhotoUrl" width="350" height="600" />
+                        <br />
                         @foreach (var schedule in item?.Schedule?.Replace(" ", string.Empty).Split(',').ToList())
                         {
                             var horario = schedule;
                             <button type="button" value="@schedule" class="btn btn-primary mt-2 ml-2" onclick="ToggleSelect(@item.Id, '@horario')"
                                     data-toggle="button" aria-pressed="false" autocomplete="off" id="MovieId-@item.Id">
-                              @schedule
+                                @schedule
                             </button>
                         }
                         <br />
@@ -59,7 +60,7 @@
                             <button class="btn btn-outline-success" id="btnSelectButton" onclick="SelectShowTime(@item.Id,@item.Num_Sala)"> Seleccionar función</button>
                         </div>
                     </div>
-                    <hr/>
+                    <hr />
                 }
             }
         </div>
@@ -70,13 +71,21 @@
     <partial name="_Step2">
 </div>
 
+<div id="Step3" style="display:none;">
+    <partial name="_Step3">
+</div>
+
 <script>
+    var alaea = new Date(Date.parse('@CurrentDate'));
 
-
-    var selectedSchedule = ""; 
     var selectedMovieId =  0;
-    var TheatreRoom =  0;               
+    var TheatreRoom =  0;
     var ticketAmount = 0;
+
+    var showDate = "";
+    var selectedSchedule = "";
+
+    var conconatenadoFecha = "";
     var selectedTicket = "";
 
     function ToggleSelect(id, schedule)
@@ -88,86 +97,175 @@
 
     $(document).ready(function () {
         var date = new Date();
-        var day = date.getDate();
-        var month = date.getMonth() + 1;
-        var year = date.getFullYear();
+        var day = alaea.getDate();
+        var month = alaea.getMonth() + 1;
+        var year = alaea.getFullYear();
         if (month < 10) month = "0" + month;
         if (day < 10) day = "0" + day;
         var today = year + "-" + month + "-" + day;
 
-        $("#datePicker").val(today);
+        if (!alaea)
+        {
+            $("#datePicker").val(alaea);
+        }
+        else
+        {
+            $("#datePicker").val(today);
+        }
     });
 
     $("#datePicker").change(function () {
-        var daySpace="";
         var date = new Date($("input").val());
-        var day = date.getDate() +1;
+        var day = date.getDate() + 1;
         (day.toString()).length == 1 ? daySpace="0" : day;
         var month = date.getMonth() +1;
         var year = date.getFullYear();
-        var time = year + "-" + month + "-" + daySpace + day + " " + "13:09:00"; 
+        var time = year + "-" + month + "-" + day + " " + "13:09:00";
+
+        if (!alaea)
+        {
+            $("#datePicker").val(alaea);
+        }
+        else
+        {
+            $("#datePicker").val(time);
+        }
+
         $.ajax({
             url: "/TicketSale/Step1",
             type: 'GET',
             data: { 'date': time },
             success: function (data) {
-                window.location.href = "/TicketSale/Step1?date="+time;
+                window.location.href = "/TicketSale/Step1?date=" + time;
             }, error: function (data) {
                 window.location.href = "/TicketSale/Step1?date="+time;
             }
         });
     });
 
-    function SelectShowTime(id, Num_sala)
-    {
+    var seatsList = [];
+     function SelectShowTime(id, Num_sala)
+        {
         TheatreRoom = Num_sala;
         ticketAmount = $("#ticketAmount").val();
-        selectedTicket = $("#mySelect-"+id+" :selected").val();
-        $("#Step1").toggle();
-        $("#Step2").toggle();
+        selectedTicket = $("#mySelect-" + id + " :selected").val();
+
+        var date = $("#datePicker").val() + " " + selectedSchedule;
+        $.ajax({
+            type: "GET",
+            url: "/api/Booth/GetShowSeats",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            data:
+            {
+                "idSala": TheatreRoom,
+                "Horario": date
+            },
+            success: function (data) {
+                console.log(data);
+
+                data.forEach(function (element) {
+                    var tr = document.createElement("div");
+
+                    element.forEach(function (dato)
+                    {
+                        var btn = document.createElement("button");
+                        btn.className = "btn btn-outline-dark m-2";
+                        btn.onclick = (function ()
+                        {
+                            if (!seatsList.includes(this.innerHTML) && seatsList.length < ticketAmount)
+                            {
+                                seatsList.push(dato.name);
+                                    $(this).css("background", "pink");
+                                console.log(seatsList);
+
+                                
+                            }
+                            else if (seatsList.includes(this.innerHTML)) {
+                                seatsList.splice(seatsList.indexOf(dato.name), 1);
+                                $(this).css("background", "white");
+                                console.log(seatsList);
+                            }
+
+                            if (seatsList.length == ticketAmount) {
+                                $("#To3rdStep").show();
+                            } else {
+                                $("#To3rdStep").hide();
+                            }
+                        });
+
+                        if (dato.occupied)
+                        {
+                            btn.innerHTML = "X"
+                            btn.setAttribute("disabled", "true");
+                        }
+                        else
+                            btn.innerHTML = dato.name
+
+                        tr.append(btn);
+                    })
+
+                    $("#ShowSeats").append(tr);
+                })
+
+                $("#Step1").toggle();
+                $("#Step2").toggle();
+
+                
+            },
+            error: function (data) {
+                alert(data.responseText);
+            }
+        });
     }
 
-    //$( "#target" ).click(function() {
-    //  alert( "Handler for .click() called." );
-    //});
+    $( "#To3rdStep" ).click(function() {
+         $("#Step2").toggle();
+         $("#Step3").toggle();
+    });
 
 
-    //$.ajax({  
-    //        type: "GET",  
-    //        url: "/api/StudentAPI/GetAllStudents",  
-    //        contentType: "application/json; charset=utf-8",  
-    //        dataType: "json",  
-    //        success: function (data) {  
-    //            //alert(JSON.stringify(data));                  
-    //            $("#DIV").html('');   
-    //            var DIV = '';  
-    //            $.each(data, function (i, item) {  
-    //                var rows = "<tr>" +  
-    //                    "<td id='RegdNo'>" + item.regNo + "</td>" +  
-    //                    "<td id='Name'>" + item.name + "</td>" +  
-    //                    "<td id='Address'>" + item.address + "</td>" +  
-    //                    "<td id='PhoneNo'>" + item.phoneNo + "</td>" +  
-    //                    "<td id='AdmissionDate'>" + Date(item.admissionDate,  
-    //                        "dd-MM-yyyy") + "</td>" +  
-    //                    "</tr>";  
-    //                $('#Table').append(rows);  
-    //            }); //End of foreach Loop   
-    //            console.log(data);  
-    //        }, //End of AJAX Success function  
-  
-    //        failure: function (data) {  
-    //            alert(data.responseText);  
-    //        }, //End of AJAX failure function  
-    //        error: function (data) {  
-    //            alert(data.responseText);  
-    //        } //End of AJAX error function  
-    //    });         
-    //$( "#MovieId-"+id).click(function() {
-    //    alert( "Handler for .click() called." );
-    //});
+    function member() {
+        
+        var id = $("#membershipNumber").val();
+        $.ajax({
+        url: "/api/Booth/GetMembership",
+        type: 'GET',
+        data: {'id':id},
+            success: function (data) {
+                $("#membership").hide();
+                $("#points").show();
+                $("#membershipId").text(data.id_Membresia);
+                $("#membershipOwner").text(data.nombre);
+                $("#membershipPoints").text(data.puntos);
+                $("#membershipPercent").text(data.porcentaje);
+                console.log("Success");
+            }
+        });
+    }
 
-    //$(document).ready(function () {
-    //    $("#Step2").hide();
-    //});
+    function points() {
+        var id = $("#membershipId").text();
+        var idPuntoVenta = 1;
+        var puntosGenerados = parseInt($("#membershipPoints").text()) * venta;
+
+        var membresia = {
+            Id_Membresia: id,
+            Id_Punto_Venta: idPuntoVenta,
+            Puntos_Generados: puntosGenerados
+        }
+
+        $.ajax({
+        url: "/api/Booth/PostMembershipPoints",
+        type: 'POST',
+        data: {'membresia':membresia},
+            success: function (data) {
+                $("#points").hide();
+                console.log("Success");
+            }, error: function (data) {
+                alert(data);
+            }
+        });
+    }
 
 </script>
