--- a/TaquillaITH/Views/TicketSale/_Step2.cshtml
+++ b/TaquillaITH/Views/TicketSale/_Step2.cshtml
@@ -4,22 +4,8 @@
             <h1 class="display-4">Paso 2 - Catálogo de Películas</h1>
         </div>
     </div>
-    <div class="row mt-2 justify-content-md-center">
-        <div class="col-6">
-            <p>Al dia de:</p>
-        </div>
-    </div>
-        <div class="row mt-2 justify-content-md-center">
-        <div class="col-6">
-            <input id="datePicker" type="date" class="form-control" placeholder="Fecha" aria-label="Fecha" aria-describedby="addon-wrapping">  
-        </div>
-    </div>
-    <div class="row">
+    <div class="row" id="ShowSeats">
         <hr/>
-        <h2>Paso Namber Tu</h2>
     </div>
+    <button id="To3rdStep" style="display:none;"> Siguiente </button>
 </div>
-
-<script>
-
-</script>
