--- a/TaquillaITH/Views/TicketSale/Step1.cshtml
+++ b/TaquillaITH/Views/TicketSale/Step1.cshtml
@@ -30,7 +30,7 @@
                         <h1> @item.Name </h1>
                         <img src="@item.PhotoUrl" width="350" height="600" />
                         <br />
-                        @foreach (var schedule in item?.Schedule?.Replace(" ", string.Empty).Split(',').ToList())
+                        @foreach (var schedule in item.horarios)
                         {
                             var horario = schedule;
                             <button type="button" value="@schedule" class="btn btn-primary mt-2 ml-2" onclick="ToggleSelect(@item.Id, '@horario')"
