--- a/TaquillaITH/Views/TicketSale/_Step3.cshtml
+++ b/TaquillaITH/Views/TicketSale/_Step3.cshtml
@@ -14,7 +14,7 @@
             <p>Tiene a su disponibilidad: <b><span id="membershipPoints"></span></b> puntos.</p>
             <p>Ingrese la cantidad de puntos que desea utilizar:</p>
             <input type="text" class="form-control col-12 col-xl-12" id="membershipNumber" placeholder="Ej. 10">
-            <button class="col-6 col-xl-6 btn btn-light mt-2 align-self-end">Confirmar</button>
+            <button class="col-6 col-xl-6 btn btn-light mt-2 align-self-end" id="To4rthStep">Confirmar</button>
             <footer class="blockquote-footer">Se generarán puntos partir del <cite><span id="membershipPercent"></span>%</cite> de la venta.</footer>
         </blockquote>
       </div>
